tests/typing/fail/new_init_fail2.rb

class A
  def initialize()
  end

end

a = A.new(3)

